src/test/tests/semanticError/stringToCharArray.wacc
# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  char[] a = "hi"
end